--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Test</h1>
-<a href="https://aqueminivan.github.io/mgs2.html">MGS2 Script</a>
+<h1>僕のサイト</h1>
+<a href="https://aqueminivan.github.io/mgs2.html">メタルギアソリッド2</a>
