--- a/tanker.html
+++ b/tanker.html
@@ -1,1 +1,7 @@
 <h1>タンカー</h1>
+<p>
+  スネーク：こちらスネーク、聞こえるか、オタコン？<br/>
+  オタコン：ああ僕だよ、スネーク。聞こえる・・・・・・。<br/>
+  スネーク：・・・・・・待たせたな。<ruby>潜入<rt>スニーク</rt></ruby>ポイントに到着・・・・・・。<br/>
+  オタコン：上手くいったかい？<br/>
+</p>
