--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
+    <link rel="stylesheet" href="site.css">
   </head>
 </html>
+<body>
 <h1>僕のサイト</h1>
 <a href="https://aqueminivan.github.io/mgs2.html">メタルギアソリッド2</a>
+</body>
