--- a/mgs2.html
+++ b/mgs2.html
@@ -1,4 +1,11 @@
-<h1>メタルギアソリッド2 サンズオブリバティセリフ集</h1>
+<html>
+  <head>
+    <link rel="stylesheet" href="site.css">
+  </head>
+</html>
+<body>
+  <h1>メタルギアソリッド2 サンズオブリバティセリフ集</h1>
 <ol>
 <li><a href="tanker.html">タンカー</a></li>
 </ol>
+  </body>
