--- a/tanker.html
+++ b/tanker.html
@@ -1,3 +1,9 @@
+<html>
+  <head>
+    <link rel="stylesheet" href="site.css">
+  </head>
+</html>
+<body>
 <h1>タンカー</h1>
 <h2> 第一コーデック会話</h2>
 <p>
@@ -43,3 +49,4 @@
   反メタルギア財団『フィランソロピー』<br/>
   ・・・国連にも<ruby>非政府組織<rt>NGO</rt>として登録もされてる
 </p>
+    </body>
