--- a/tanker.html
+++ b/tanker.html
@@ -7,45 +7,45 @@
 <h1>タンカー</h1>
 <h2> 第一コーデック会話</h2>
 <p>
-  スネーク：こちらスネーク、聞こえるか、オタコン？<br/>
-  オタコン：ああ僕だよ、スネーク。聞こえる・・・・・・。<br/>
-  スネーク：・・・・・・待たせたな。<ruby>潜入<rt>スニーク</rt></ruby>ポイントに到着・・・・・・。<br/>
-  オタコン：上手くいったかい？<br/>
-  スネーク：着地の衝撃でステルス迷彩が壊れた。<br/>
-  オタコン：随分こき使ってきたからね・・・・・・。悪いけど我慢してくれ。軍じゃないんだ。<br/>
-  スネーク：ああ。いつまでも<ruby>ステルス迷彩<rt>こんなもの</rt></ruby>に頼るつもりはない。<br/>
-  オタコン：だけど民間の良いところもあるだろ？プライバシーは守られてるし・・・・・・。<br/>
-  スネーク：変な薬も盛られずにすむしな。<br/>
-  オタコン：ナオミのこと・・・・・・？<br/>
-  スネーク：うるさい見張り役がいないのも気が楽だ。
-  オタコン：メイ・リンか・・・・・・。また彼女に頼んでおくよ。<ruby>NATICK<rt>ナティック</rt></ruby>新兵器。<br/>
-  スネーク：陸軍兵士<ruby>システムセンター<rt>SSCEN</rt></ruby>からの横流しか。彼女に伝えておいてくれ。<br/>
+  <b>スネーク</b>：こちらスネーク、聞こえるか、オタコン？<br/>
+  <b>オタコン</b>：ああ僕だよ、スネーク。聞こえる・・・・・・。<br/>
+  <b>スネーク</b>：・・・・・・待たせたな。<ruby>潜入<rt>スニーク</rt></ruby>ポイントに到着・・・・・・。<br/>
+  <b>オタコン</b>：上手くいったかい？<br/>
+  <b>スネーク</b>：着地の衝撃でステルス迷彩が壊れた。<br/>
+  <b>オタコン</b>：随分こき使ってきたからね・・・・・・。悪いけど我慢してくれ。軍じゃないんだ。<br/>
+  <b>スネーク</b>：ああ。いつまでも<ruby>ステルス迷彩<rt>こんなもの</rt></ruby>に頼るつもりはない。<br/>
+  <b>オタコン</b>：だけど民間の良いところもあるだろ？プライバシーは守られてるし・・・・・・。<br/>
+  <b>スネーク</b>：変な薬も盛られずにすむしな。<br/>
+  <b>オタコン</b>：ナオミのこと・・・・・・？<br/>
+  <b>スネーク</b>：うるさい見張り役がいないのも気が楽だ。
+  <b>オタコン</b>：メイ・リンか・・・・・・。また彼女に頼んでおくよ。<ruby>NATICK<rt>ナティック</rt></ruby>新兵器。<br/>
+  <b>スネーク</b>：陸軍兵士<ruby>システムセンター<rt>SSCEN</rt></ruby>からの横流しか。彼女に伝えておいてくれ。<br/>
   いずれはバレる。早いうちに手を引くようにな。<br/>
-  オタコン：それもそうだね・・・・・・。じゃあスネーク、本題に入るよ。<br/>
+  <b>オタコン</b>：それもそうだね・・・・・・。じゃあスネーク、本題に入るよ。<br/>
   シャドーモセス事件のあとメタルギアの技術情報が<ruby>闇市場<rt>ブラックマーケット</rt></ruby>で密売されたよね。<br/>
-  スネーク：オセロットの仕業だ。<br/>
-  オタコン：ああ。それで全世界にメタルギアの亜種が拡散した。<br/>
-  スネーク：いまや核武装国にとって、メタルギアは特別な兵器ではない。<br/>
-  オタコン：今回の新型はそれらに対抗するために設計された物らしい。水陸両用の対メタルギア兵器・・・・・・。<br/>
-  スネーク：それで新型は海兵隊の所属つて訳か・・・・・・？<br/>
+  <b>スネーク</b>：オセロットの仕業だ。<br/>
+  <b>オタコン</b>：ああ。それで全世界にメタルギアの亜種が拡散した。<br/>
+  <b>スネーク</b>：いまや核武装国にとって、メタルギアは特別な兵器ではない。<br/>
+  <b>オタコン</b>：今回の新型はそれらに対抗するために設計された物らしい。水陸両用の対メタルギア兵器・・・・・・。<br/>
+  <b>スネーク</b>：それで新型は海兵隊の所属つて訳か・・・・・・？<br/>
 </p>
 <h2> 第二カットシーン </h2>
 <p>
-  オタコン：目的はその船に積まれている新型メタルギアを発見して<br/>
+  <b>オタコン</b>：目的はその船に積まれている新型メタルギアを発見して<br/>
   その証拠映像を<ruby>写真<rt>カメラ</rt></ruby>に収める事だ<br/>
   でもまずは船橋最上階にある操舵室に向かってほしいんだ<br/>
   その偽装タンカーがどこに向かっているのかを調べてもらいたい<br/>
-  スネーク：情報収集か<br/>
-  オタコン：新型メタルギアにはわからないところが多いんだ<br/>
+  <b>スネーク</b>：情報収集か<br/>
+  <b>オタコン</b>：新型メタルギアにはわからないところが多いんだ<br/>
   詳しい性能軍用方法どこまで完成しているのか・・・<br/>
   演習場所わかればそのうちのいくらを推測できると思う<br/>
-  スネーク：わかった先に操舵室へ向かう<br/>
-  オタコン：あとできるだけ戦闘はさけてくれよ<br/>
+  <b>スネーク</b>：わかった先に操舵室へ向かう<br/>
+  <b>オタコン</b>：あとできるだけ戦闘はさけてくれよ<br/>
   目的はあくまで新型メタルギア開発の証拠を集めてー<br/>
   公開することだ<br/>
   誰にも見つからずに脱出できればそれが一番だからね<br/>
-  スネーク：わかっている俺たちはテロリストじゃない<br/>
-  オタコン：そうだよ<br/>
+  <b>スネーク</b>：わかっている俺たちはテロリストじゃない<br/>
+  <b>オタコン</b>：そうだよ<br/>
   反メタルギア財団『フィランソロピー』<br/>
   ・・・国連にも<ruby>非政府組織<rt>NGO</rt>として登録もされてる
 </p>
