--- a/tanker.html
+++ b/tanker.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="site.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
 </html>
 <body>
@@ -17,7 +18,7 @@
   <b>オタコン</b>：だけど民間の良いところもあるだろ？プライバシーは守られてるし・・・・・・。<br/>
   <b>スネーク</b>：変な薬も盛られずにすむしな。<br/>
   <b>オタコン</b>：ナオミのこと・・・・・・？<br/>
-  <b>スネーク</b>：うるさい見張り役がいないのも気が楽だ。
+  <b>スネーク</b>：うるさい見張り役がいないのも気が楽だ。<br/>
   <b>オタコン</b>：メイ・リンか・・・・・・。また彼女に頼んでおくよ。<ruby>NATICK<rt>ナティック</rt></ruby>新兵器。<br/>
   <b>スネーク</b>：陸軍兵士<ruby>システムセンター<rt>SSCEN</rt></ruby>からの横流しか。彼女に伝えておいてくれ。<br/>
   いずれはバレる。早いうちに手を引くようにな。<br/>
