--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
 </html>
-<body>
+<body class="col-12 p-5">
 <h1>僕のサイト</h1>
 <a href="https://aqueminivan.github.io/mgs2.html">メタルギアソリッド2</a>
 </body>
