--- a/mgs2/mgs2.html
+++ b/mgs2/mgs2.html
@@ -1,12 +1,16 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="site.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  </head>
+
+<head>
+  <link rel="stylesheet" href="site.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+</head>
+
 </html>
+
 <body class="col-12 p-5">
   <h1>メタルギアソリッド2 サンズオブリバティセリフ集</h1>
-<ol>
-<li><a href="tanker.html">タンカー</a></li>
-</ol>
+  <ol>
+    <li><a href="tanker.html">タンカー</a></li>
+  </ol>
 </body>
