Fixed broken href

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 
 <body class="col-12 p-5">
   <h1>僕のサイト</h1>
-  <a href="https://aqueminivan.github.io/mgs2.html">メタルギアソリッド2</a>
+  <a href="https://aqueminivan.github.io/mgs2/mgs2.html">メタルギアソリッド2</a>
 </body>
