--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -11,49 +11,50 @@
 <body class="col-12 p-5">
   <h1>タンカー</h1>
   <hr>
-  <h5> 第一コーデック会話</h5>
+  <h5>第一コーデック会話</h5>
   <div>
-    <span class="mb-2"><b>スネーク</b>：こちらスネーク、聞こえるか、オタコン？</span><br />
-    <span class="mb-2"><b>オタコン</b>：ああ僕だよ、スネーク。聞こえる・・・・・・。</span><br />
-    <span class="mb-2"><b>スネーク</b>：・・・・・・待たせたな。<ruby>潜入<rt>スニーク</rt></ruby>ポイントに到着・・・・・・。</span><br />
-    <span class="mb-2"><b>オタコン</b>：上手くいったかい？</span><br />
-    <span class="mb-2"><b>スネーク</b>：着地の衝撃でステルス迷彩が壊れた。</span><br />
-    <span class="mb-2"><b>オタコン</b>：随分こき使ってきたからね・・・・・・。悪いけど我慢してくれ。軍じゃないんだ。</span><br />
-    <span class="mb-2"><b>スネーク</b>：ああ。いつまでも<ruby>ステルス迷彩<rt>こんなもの</rt></ruby>に頼るつもりはない。</span><br />
-    <span class="mb-2"><b>オタコン</b>：だけど民間の良いところもあるだろ？プライバシーは守られてるし・・・・・・。</span><br />
-    <span class="mb-2"><b>スネーク</b>：変な薬も盛られずにすむしな。</span><br />
-    <span class="mb-2"><b>オタコン</b>：ナオミのこと・・・・・・？</span><br />
-    <span class="mb-2"><b>スネーク</b>：うるさい見張り役がいないのも気が楽だ。</span><br />
-    <span class="mb-2"><b>オタコン</b>：メイ・リンか・・・・・・。また彼女に頼んでおくよ。<ruby>NATICK<rt>ナティック</rt></ruby>新兵器。</span><br />
-    <span class="mb-2"><b>スネーク</b>：陸軍兵士<ruby>システムセンター<rt>SSCEN</rt></ruby>からの横流しか。彼女に伝えておいてくれ。</span><br />
-    <span class="mb-2">いずれはバレる。早いうちに手を引くようにな。</span><br />
-    <span class="mb-2"><b>オタコン</b>：それもそうだね・・・・・・。じゃあスネーク、本題に入るよ。</span><br />
-    <span class="mb-2">シャドーモセス事件のあとメタルギアの技術情報が<ruby>闇市場<rt>ブラックマーケット</rt></ruby>で密売されたよね。</span><br />
-    <span class="mb-2"><b>スネーク</b>：オセロットの仕業だ。</span><br />
-    <span class="mb-2"><b>オタコン</b>：ああ。それで全世界にメタルギアの亜種が拡散した。</span><br />
-    <span class="mb-2"><b>スネーク</b>：いまや核武装国にとって、メタルギアは特別な兵器ではない。</span><br />
-    <span class="mb-2"><b>オタコン</b>：今回の新型はそれらに対抗するために設計された物らしい。水陸両用の対メタルギア兵器・・・・・・。</span><br />
-    <span class="mb-2"><b>スネーク</b>：それで新型は海兵隊の所属つて訳か・・・・・・？</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：こちらスネーク、聞こえるか、オタコン？</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：ああ僕だよ、スネーク。聞こえる・・・・・・。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：・・・・・・待たせたな。<ruby>潜入<rt>スニーク</rt></ruby>ポイントに到着・・・・・・。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：上手くいったかい？</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：着地の衝撃でステルス迷彩が壊れた。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：随分こき使ってきたからね・・・・・・。悪いけど我慢してくれ。軍じゃないんだ。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：ああ。いつまでも<ruby>ステルス迷彩<rt>こんなもの</rt></ruby>に頼るつもりはない。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：だけど民間の良いところもあるだろ？プライバシーは守られてるし・・・・・・。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：変な薬も盛られずにすむしな。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：ナオミのこと・・・・・・？</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：うるさい見張り役がいないのも気が楽だ。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：メイ・リンか・・・・・・。また彼女に頼んでおくよ。<ruby>NATICK<rt>ナティック</rt>
+      </ruby>新兵器。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：陸軍兵士<ruby>システムセンター<rt>SSCEN</rt></ruby>からの横流しか。彼女に伝えておいてくれ。</span><br />
+    <span class="mb-2 inline-span">いずれはバレる。早いうちに手を引くようにな。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：それもそうだね・・・・・・。じゃあスネーク、本題に入るよ。</span><br />
+    <span class="mb-2 inline-span">シャドーモセス事件のあとメタルギアの技術情報が<ruby>闇市場<rt>ブラックマーケット</rt></ruby>で密売されたよね。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：オセロットの仕業だ。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：ああ。それで全世界にメタルギアの亜種が拡散した。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：いまや核武装国にとって、メタルギアは特別な兵器ではない。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：今回の新型はそれらに対抗するために設計された物らしい。水陸両用の対メタルギア兵器・・・・・・。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：それで新型は海兵隊の所属つて訳か・・・・・・？</span><br />
   </div>
   <hr>
-  <h5> 第二カットシーン </h5>
+  <h5>第二カットシーン</h5>
   <p>
-    <span class="mb-2"><b>オタコン</b>：目的はその船に積まれている新型メタルギアを発見して</span><br />
-    <span class="mb-2">その証拠映像を<ruby>写真<rt>カメラ</rt></ruby>に収める事だ</span><br />
-    <span class="mb-2">でもまずは船橋最上階にある操舵室に向かってほしいんだ</span><br />
-    <span class="mb-2">その偽装タンカーがどこに向かっているのかを調べてもらいたい</span><br />
-    <span class="mb-2"><b>スネーク</b>：情報収集か</span><br />
-    <span class="mb-2"><b>オタコン</b>：新型メタルギアにはわからないところが多いんだ</span><br />
-    <span class="mb-2">詳しい性能軍用方法どこまで完成しているのか・・・</span><br />
-    <span class="mb-2">演習場所わかればそのうちのいくらを推測できると思う</span><br />
-    <span class="mb-2"><b>スネーク</b>：わかった先に操舵室へ向かう</span><br />
-    <span class="mb-2"><b>オタコン</b>：あとできるだけ戦闘はさけてくれよ</span><br />
-    <span class="mb-2">目的はあくまで新型メタルギア開発の証拠を集めてー</span><br />
-    <span class="mb-2">公開することだ</span><br />
-    <span class="mb-2">誰にも見つからずに脱出できればそれが一番だからね</span><br />
-    <span class="mb-2"><b>スネーク</b>：わかっている俺たちはテロリストじゃない</span><br />
-    <span class="mb-2"><b>オタコン</b>：そうだよ</span><br />
-    <span class="mb-2">反メタルギア財団『フィランソロピー』</span><br />
-    <span class="mb-2">・・・国連にも<ruby>非政府組織<rt>NGO</rt>として登録もされてる</span>
+    <span class="mb-2 inline-span"><b>オタコン</b>：目的はその船に積まれている新型メタルギアを発見して</span><br />
+    <span class="mb-2 inline-span">その証拠映像を<ruby>写真<rt>カメラ</rt></ruby>に収める事だ</span><br />
+    <span class="mb-2 inline-span">でもまずは船橋最上階にある操舵室に向かってほしいんだ</span><br />
+    <span class="mb-2 inline-span">その偽装タンカーがどこに向かっているのかを調べてもらいたい</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：情報収集か</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：新型メタルギアにはわからないところが多いんだ</span><br />
+    <span class="mb-2 inline-span">詳しい性能軍用方法どこまで完成しているのか・・・</span><br />
+    <span class="mb-2 inline-span">演習場所わかればそのうちのいくらを推測できると思う</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：わかった先に操舵室へ向かう</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：あとできるだけ戦闘はさけてくれよ</span><br />
+    <span class="mb-2 inline-span">目的はあくまで新型メタルギア開発の証拠を集めてー</span><br />
+    <span class="mb-2 inline-span">公開することだ</span><br />
+    <span class="mb-2 inline-span">誰にも見つからずに脱出できればそれが一番だからね</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：わかっている俺たちはテロリストじゃない</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：そうだよ</span><br />
+    <span class="mb-2 inline-span">反メタルギア財団『フィランソロピー』</span><br />
+    <span class="mb-2 inline-span">・・・国連にも<ruby>非政府組織<rt>NGO</rt>として登録もされてる</span>
   </p>
 </body>
