--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -9,9 +9,9 @@
 </html>
 
 <body class="col-12 p-5">
-  <h1>タンカー</h1>
+  <h1 class="fw-bold">タンカー</h1>
   <hr>
-  <h5>第一コーデック会話</h5>
+  <h5 class="fw-bold">第一コーデック会話</h5>
   <div>
     <span class="mb-2 inline-span"><b>スネーク</b>：こちらスネーク、聞こえるか、オタコン？</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：ああ僕だよ、スネーク。聞こえる・・・・・・。</span><br />
@@ -37,8 +37,8 @@
     <span class="mb-2 inline-span"><b>スネーク</b>：それで新型は海兵隊の所属つて訳か・・・・・・？</span><br />
   </div>
   <hr>
-  <h5>第二カットシーン</h5>
-  <p>
+  <h5 class="fw-bold">第二カットシーン</h5>
+  <div>
     <span class="mb-2 inline-span"><b>オタコン</b>：目的はその船に積まれている新型メタルギアを発見して</span><br />
     <span class="mb-2 inline-span">その証拠映像を<ruby>写真<rt>カメラ</rt></ruby>に収める事だ</span><br />
     <span class="mb-2 inline-span">でもまずは船橋最上階にある操舵室に向かってほしいんだ</span><br />
@@ -55,6 +55,28 @@
     <span class="mb-2 inline-span"><b>スネーク</b>：わかっている俺たちはテロリストじゃない</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：そうだよ</span><br />
     <span class="mb-2 inline-span">反メタルギア財団『フィランソロピー』</span><br />
-    <span class="mb-2 inline-span">・・・国連にも<ruby>非政府組織<rt>NGO</rt>として登録もされてる</span>
-  </p>
+    <span class="mb-2 inline-span">・・・国連にも<ruby>非政府組織<rt>NGO</rt>として登録もされてる</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：まあNGOの中では過激な存在には違いない</span><br />
+    <hr>
+    <span class="mb-2 inline-span"><b>オタコン</b>：それじゃ装備の説明をするね・・・</span><br />
+    <span class="mb-2 inline-span">武器はベレッタM92Fのバレルを改造した簡易麻酔銃・・・</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：M9・・・</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：スライドロックされているから１発ごとの<ruby>装弾<rt>リロード</rt></ruby>が必要だ</span><br />
+    <span class="mb-2 inline-span">ちょっと不便だけど</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：現地調達よりはましだサプレッサーもついてるしな</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：麻酔は数秒で効くし薬は数時問はもつ</span><br />
+    <span class="mb-2 inline-span">アフリカゾウもぶっ倒れるくらいだ</span><br />
+    <span class="mb-2 inline-span">レーザー・ポインターも付いてる</span><br />
+    <span class="mb-2 inline-span">麻酔弾はどこに当たるかで効き目が違う</span><br />
+    <span class="mb-2 inline-span">手足や頭部胸部では最大数十秒は違うよ</span><br />
+    <span class="mb-2 inline-span">装備の方は・・・</span><br />
+    <span class="mb-2 inline-span">スネーク何だい！</span><br />
+    <span class="mb-2 inline-span">煙草？</span><br />
+    <span class="mb-2 inline-span">相変わらずだな</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：お守りみたいなもんだ</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：しょうがない奴だな・・・</span><br />
+    <span class="mb-2 inline-span">これがデジタルカメラ</span><br />
+    <span class="mb-2 inline-span">使い方は<ruby>前回<rt>これまで</rt></ruby>とほとんど同じだ</span><br />
+    <hr>
+  </div>
 </body>
