--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -64,7 +64,7 @@
     <span class="mb-2 inline-span"><b>オタコン</b>：スライドロックされているから１発ごとの<ruby>装弾<rt>リロード</rt></ruby>が必要だ</span><br />
     <span class="mb-2 inline-span">ちょっと不便だけど</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：現地調達よりはましだサプレッサーもついてるしな</span><br />
-    <span class="mb-2 inline-span"><b>オタコン</b>：麻酔は数秒で効くし薬は数時問はもつ</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：麻酔は数秒で効くし薬は数時間はもつ</span><br />
     <span class="mb-2 inline-span">アフリカゾウもぶっ倒れるくらいだ</span><br />
     <span class="mb-2 inline-span">レーザー・ポインターも付いてる</span><br />
     <span class="mb-2 inline-span">麻酔弾はどこに当たるかで効き目が違う</span><br />
