Further progress on script

--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -79,4 +79,63 @@
     <span class="mb-2 inline-span">使い方は<ruby>前回<rt>これまで</rt></ruby>とほとんど同じだ</span><br />
     <hr>
   </div>
+  <h5 class="fw-bold">第三カットシーン</h5>
+  <div>
+    <span class="mb-2 inline-span"><b>スネーク</b>：武器は持っていないようだ・・・</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：いいかいスネーク</span><br />
+    <span class="mb-2 inline-span">相手は正規の海兵隊員だテロリストじゃない</span><br />
+    <span class="mb-2 inline-span">見つからないようにね</span><br />
+    <span class="mb-2 inline-span">隠密行動だよ</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：ああ</span><br />
+    <span class="mb-2 inline-span">いざとなれば<ruby>麻酔銃<rt>M9</rt></ruby>でちょっと眠ってもらう・・・</span><br />
+    <span class="mb-2 inline-span">ところでオタコンお前の情報は確かなんだろうな？</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：間違いない</span><br />
+    <span class="mb-2 inline-span">ペンタゴンの極秘ファイルに<ruby>侵入<rt>ハッキング</rt></ruby>したんだ</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：痕跡は残さなかっただろうな？</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：信じてくれよそんなヘマはしてない</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：これが罠である可能性もある</span><br />
+    <span class="mb-2 inline-span">俺達は賞金首だからな</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：考えすぎだよ</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：だといいが・・・</span><br />
+    <span class="mb-2 inline-span">ここからだとごく普通の乗組員にしか見えないな・・・</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：まさか甲板にいる連中に軍服を着せる訳にはいかないだろう</span><br />
+    <span class="mb-2 inline-span">ハドソン川やマンハッタン湾は船の往来が頻繁にある</span><br />
+    <span class="mb-2 inline-span">リバーサイドからも丸見えだしね</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：喫水が妙に深い・・・</span><br />
+    <span class="mb-2 inline-span">航海計画書によると</span><br />
+    <span class="mb-2 inline-span">ハドソン川上流で重油を降ろしているはず・・・</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：やはり<ruby>新型<rt>アレ</rt></ruby>があるということだよ</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：対テロ作戦の通常<ruby>作戦<rt>SOP</rt></ruby>規定にもあるように</span><br />
+    <span class="mb-2 inline-span">船への潜入は後部からと決まっている</span><br />
+    <span class="mb-2 inline-span">もう少し警戒していてもおかしくないんだが・・・</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：心配性だな・・・</span><br />
+    <span class="mb-2 inline-span">衛星ビジネスも繁盛している</span><br />
+    <span class="mb-2 inline-span"><ruby>新型<rt>アレ</rt></ruby>があるとすればおそらく甲板下の船倉</span><br />
+    <span class="mb-2 inline-span">船倉への入口はわかるかい？</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：居住区への入口は幾つかあるようだ</span><br />
+    <span class="mb-2 inline-span">ヘリ？</span><br />
+    <span class="mb-2 inline-span">どうやらメタルギアを狙っているのは俺達だけではないようだ</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：さっきのヘリの音？</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：ああ</span><br />
+    <span class="mb-2 inline-span">おそらく別の部隊だろう</span><br />
+    <span class="mb-2 inline-span">乗って取るつもりか？</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：コントロールを抑えるつもりだよ</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：オタコン</span><br />
+    <span class="mb-2 inline-span">この規模のタンカーを制御するには最低何人必要なんだ？</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：コンピューター制御だから・・・18人くらいかな</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：AKS‐74U?</span><br />
+    <span class="mb-2 inline-span">ロシア人？</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：間違いない？</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：<ruby>海兵隊<rt>ジャーヘッド</rt></ruby>にあんな長髪はいない</span><br />
+    <span class="mb-2 inline-span">写真を送信する身元を調べてくれ・・・</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：わかった</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：船の制御を抑えられたようだな</span><br />
+    <span class="mb-2 inline-span"><ruby>Ka-60<rt>カサッカ</rt></ruby>？</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：カサッカってカモフ設計局の輸送ヘリ?</span><br />
+    <hr>
+  </div>
+  <h5 class="fw-bold">第二コーデック会話</h5>
+  <div>
+    
+  </div>
 </body>
