--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -114,6 +114,7 @@
     <span class="mb-2 inline-span">船倉への入口はわかるかい？</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：居住区への入口は幾つかあるようだ</span><br />
     <span class="mb-2 inline-span">ヘリ？</span><br />
+    <span class="mb-2 inline-span">!？</span><br />
     <span class="mb-2 inline-span">どうやらメタルギアを狙っているのは俺達だけではないようだ</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：さっきのヘリの音？</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：ああ</span><br />
@@ -123,7 +124,7 @@
     <span class="mb-2 inline-span"><b>スネーク</b>：オタコン</span><br />
     <span class="mb-2 inline-span">この規模のタンカーを制御するには最低何人必要なんだ？</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：コンピューター制御だから・・・18人くらいかな</span><br />
-    <span class="mb-2 inline-span"><b>スネーク</b>：AKS‐74U?</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：AKS‐74U？</span><br />
     <span class="mb-2 inline-span">ロシア人？</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：間違いない？</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：<ruby>海兵隊<rt>ジャーヘッド</rt></ruby>にあんな長髪はいない</span><br />
@@ -131,11 +132,26 @@
     <span class="mb-2 inline-span"><b>オタコン</b>：わかった</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：船の制御を抑えられたようだな</span><br />
     <span class="mb-2 inline-span"><ruby>Ka-60<rt>カサッカ</rt></ruby>？</span><br />
-    <span class="mb-2 inline-span"><b>オタコン</b>：カサッカってカモフ設計局の輸送ヘリ?</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：カサッカってカモフ設計局の輸送ヘリ？</span><br />
     <hr>
   </div>
   <h5 class="fw-bold">第二コーデック会話</h5>
   <div>
-    
+    <span class="mb-2 inline-span"><b>スネーク</b>：奴等の正体を調べる必要があるな。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：そんな物飛ばしてるなんて、どこかの軍隊かな？</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：いや、そうとも言えない。民間型のKa-62かも知れない。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
+    <span class="mb-2 inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
+    <span class="mb-2 inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：わかった、努力する。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：シャドーモセスの時とは違うんだ。何かあったらすぐ連絡してくれ。</span><br />
+    <span class="mb-2 inline-span"><b>周波数は141.12だ。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：データの記録はどうする？</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：僕がするよ。<ruby>記録<rt>セーブ</rt></ruby>用の専用回線は140.96・・・・・・。</span><br />
+    <span class="mb-2 inline-span">メイ・リンじゃなくて残念だけど。</span><br />
+    <span class="mb-2 inline-span"><ruby>記録<rt>セーブ</rt></ruby>したい時はこっちに無線してくれればいい。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：ああ・・・・・・。</span><br />
+    <span class="mb-2 inline-span"><b>オタコン</b>：ベラザノ橋を超えた所で待ってる。それまでに離脱するんだ。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：また連絡する。</span><br />
   </div>
 </body>
