Fixed broken bold

--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -141,11 +141,11 @@
     <span class="mb-2 inline-span"><b>オタコン</b>：そんな物飛ばしてるなんて、どこかの軍隊かな？</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：いや、そうとも言えない。民間型のKa-62かも知れない。</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
-    <span class="mb-2 inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
+    <span class="mb-2 inline-span">&#9;それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
     <span class="mb-2 inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：わかった、努力する。</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：シャドーモセスの時とは違うんだ。何かあったらすぐ連絡してくれ。</span><br />
-    <span class="mb-2 inline-span"><b>周波数は141.12だ。</span><br />
+    <span class="mb-2 inline-span">周波数は141.12だ。</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：データの記録はどうする？</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：僕がするよ。<ruby>記録<rt>セーブ</rt></ruby>用の専用回線は140.96・・・・・・。</span><br />
     <span class="mb-2 inline-span">メイ・リンじゃなくて残念だけど。</span><br />
