--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -136,13 +136,18 @@
     <hr>
   </div>
   <h5 class="fw-bold">第二コーデック会話</h5>
-  <div>
+  <div class="container">
     <span class="mb-2 inline-span"><b>スネーク</b>：奴等の正体を調べる必要があるな。</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：そんな物飛ばしてるなんて、どこかの軍隊かな？</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：いや、そうとも言えない。民間型のKa-62かも知れない。</span><br />
-    <span class="mb-2 inline-span"><b>オタコン</b>：いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
-    <span class="mb-2 inline-span">&#9;それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
-    <span class="mb-2 inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
+    <div class="mb-2">
+      <div class="col-1"><span><b>オタコン</b>：</span></div>
+      <div class="col-5">
+        <span class="inline-span">いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
+        <span class="inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
+        <span class="inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
+      </div>
+    </div>
     <span class="mb-2 inline-span"><b>スネーク</b>：わかった、努力する。</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：シャドーモセスの時とは違うんだ。何かあったらすぐ連絡してくれ。</span><br />
     <span class="mb-2 inline-span">周波数は141.12だ。</span><br />
