More formatting fixes

--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -11,7 +11,7 @@
 <body class="col-12 p-5">
   <h1 class="fw-bold">タンカー</h1>
   <hr>
-  <h5 class="fw-bold">第一コーデック会話</h5>
+  <h5 class="fw-bold">第一無線の会話</h5>
   <div>
     <span class="mb-2 inline-span"><b>スネーク</b>：こちらスネーク、聞こえるか、オタコン？</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：ああ僕だよ、スネーク。聞こえる・・・・・・。</span><br />
@@ -135,17 +135,19 @@
     <span class="mb-2 inline-span"><b>オタコン</b>：カサッカってカモフ設計局の輸送ヘリ？</span><br />
     <hr>
   </div>
-  <h5 class="fw-bold">第二コーデック会話</h5>
+  <h5 class="fw-bold">第二無線の会話</h5>
   <div class="container">
     <span class="mb-2 inline-span"><b>スネーク</b>：奴等の正体を調べる必要があるな。</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：そんな物飛ばしてるなんて、どこかの軍隊かな？</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：いや、そうとも言えない。民間型のKa-62かも知れない。</span><br />
     <div class="mb-2">
-      <div class="col-1"><span><b>オタコン</b>：</span></div>
-      <div class="col-5">
-        <span class="inline-span">いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
-        <span class="inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
-        <span class="inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
+      <div class="row">
+        <div class="col-1"><span><b>オタコン</b>：</span></div>
+        <div class="col-5">
+          <span class="inline-span">いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
+          <span class="inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
+          <span class="inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
+        </div>
       </div>
     </div>
     <span class="mb-2 inline-span"><b>スネーク</b>：わかった、努力する。</span><br />
