--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -141,9 +141,8 @@
     <span class="mb-2 inline-span"><b>オタコン</b>：そんな物飛ばしてるなんて、どこかの軍隊かな？</span><br />
     <span class="mb-2 inline-span"><b>スネーク</b>：いや、そうとも言えない。民間型のKa-62かも知れない。</span><br />
     <div class="mb-2">
-      <div class="row">
-        <div class="col-1"><span><b>オタコン</b>：</span></div>
-        <div class="col-5">
+        <div class="col-12">
+          <span><b>オタコン</b>
           <span class="inline-span">いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
           <span class="inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
           <span class="inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
