--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -139,25 +139,23 @@
   <div class="container">
     <span class="mb-2 inline-span"><b>スネーク</b>：奴等の正体を調べる必要があるな。</span><br />
     <span class="mb-2 inline-span"><b>オタコン</b>：そんな物飛ばしてるなんて、どこかの軍隊かな？</span><br />
-    <span class="mb-2 inline-span"><b>スネーク</b>：いや、そうとも言えない。民間型のKa-62かも知れない。</span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：いや、そうとも言えない。民間型のKa-62かも知れない。</span>
     <div class="mb-2">
-        <div class="col-12">
-          <span><b>オタコン</b>
-          <span class="inline-span">いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
-          <span class="inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
-          <span class="inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
-        </div>
-      </div>
+      <span><b>オタコン</b><br />
+        <span class="inline-span">いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
+        <span class="inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
+        <span class="inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
     </div>
-    <span class="mb-2 inline-span"><b>スネーク</b>：わかった、努力する。</span><br />
-    <span class="mb-2 inline-span"><b>オタコン</b>：シャドーモセスの時とは違うんだ。何かあったらすぐ連絡してくれ。</span><br />
-    <span class="mb-2 inline-span">周波数は141.12だ。</span><br />
-    <span class="mb-2 inline-span"><b>スネーク</b>：データの記録はどうする？</span><br />
-    <span class="mb-2 inline-span"><b>オタコン</b>：僕がするよ。<ruby>記録<rt>セーブ</rt></ruby>用の専用回線は140.96・・・・・・。</span><br />
-    <span class="mb-2 inline-span">メイ・リンじゃなくて残念だけど。</span><br />
-    <span class="mb-2 inline-span"><ruby>記録<rt>セーブ</rt></ruby>したい時はこっちに無線してくれればいい。</span><br />
-    <span class="mb-2 inline-span"><b>スネーク</b>：ああ・・・・・・。</span><br />
-    <span class="mb-2 inline-span"><b>オタコン</b>：ベラザノ橋を超えた所で待ってる。それまでに離脱するんだ。</span><br />
-    <span class="mb-2 inline-span"><b>スネーク</b>：また連絡する。</span><br />
+  </div>
+  <span class="mb-2 inline-span"><b>スネーク</b>：わかった、努力する。</span><br />
+  <span class="mb-2 inline-span"><b>オタコン</b>：シャドーモセスの時とは違うんだ。何かあったらすぐ連絡してくれ。</span><br />
+  <span class="mb-2 inline-span">周波数は141.12だ。</span><br />
+  <span class="mb-2 inline-span"><b>スネーク</b>：データの記録はどうする？</span><br />
+  <span class="mb-2 inline-span"><b>オタコン</b>：僕がするよ。<ruby>記録<rt>セーブ</rt></ruby>用の専用回線は140.96・・・・・・。</span><br />
+  <span class="mb-2 inline-span">メイ・リンじゃなくて残念だけど。</span><br />
+  <span class="mb-2 inline-span"><ruby>記録<rt>セーブ</rt></ruby>したい時はこっちに無線してくれればいい。</span><br />
+  <span class="mb-2 inline-span"><b>スネーク</b>：ああ・・・・・・。</span><br />
+  <span class="mb-2 inline-span"><b>オタコン</b>：ベラザノ橋を超えた所で待ってる。それまでに離脱するんだ。</span><br />
+  <span class="mb-2 inline-span"><b>スネーク</b>：また連絡する。</span><br />
   </div>
 </body>
