Testing more formatting changes

--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -147,10 +147,19 @@
         <span class="inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
     </div>
   </div>
-  <span class="mb-2 inline-span"><b>スネーク</b>：わかった、努力する。</span><br />
-  <span class="mb-2 inline-span"><b>オタコン</b>：シャドーモセスの時とは違うんだ。何かあったらすぐ連絡してくれ。</span><br />
-  <span class="mb-2 inline-span">周波数は141.12だ。</span><br />
-  <span class="mb-2 inline-span"><b>スネーク</b>：データの記録はどうする？</span><br />
+  <div class="mb-2">
+    <span><b>スネーク</b><br />
+      <span class="inline-span">わかった、努力する。</span><br />
+  </div>
+  <div class="mb-2">
+    <span><b>オタコン</b><br />
+      <span class="inline-span">シャドーモセスの時とは違うんだ。何かあったらすぐ連絡してくれ。</span><br />
+      <span class="inline-span">周波数は141.12だ。</span><br />
+  </div>
+  <div class="mb-2">
+    <span><b>スネーク</b><br />
+      <span class="inline-span">データの記録はどうする？</span><br />
+  </div>
   <span class="mb-2 inline-span"><b>オタコン</b>：僕がするよ。<ruby>記録<rt>セーブ</rt></ruby>用の専用回線は140.96・・・・・・。</span><br />
   <span class="mb-2 inline-span">メイ・リンじゃなくて残念だけど。</span><br />
   <span class="mb-2 inline-span"><ruby>記録<rt>セーブ</rt></ruby>したい時はこっちに無線してくれればいい。</span><br />
