--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -136,35 +136,54 @@
     <hr>
   </div>
   <h5 class="fw-bold">第二無線の会話</h5>
-  <div class="container">
-    <span class="mb-2 inline-span"><b>スネーク</b>：奴等の正体を調べる必要があるな。</span><br />
-    <span class="mb-2 inline-span"><b>オタコン</b>：そんな物飛ばしてるなんて、どこかの軍隊かな？</span><br />
-    <span class="mb-2 inline-span"><b>スネーク</b>：いや、そうとも言えない。民間型のKa-62かも知れない。</span>
-    <div class="mb-2">
-      <span><b>オタコン</b><br />
-        <span class="inline-span">いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
-        <span class="inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
-        <span class="inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
-    </div>
+  <div class="mb-2">
+    <span><b>スネーク</b></span><br />
+    <span class="mb-2 inline-span">奴等の正体を調べる必要があるな。</span><br />
   </div>
   <div class="mb-2">
-    <span><b>スネーク</b><br />
-      <span class="inline-span">わかった、努力する。</span><br />
+    <span><b>オタコン</b></span><br />
+    <span class="mb-2 inline-span">そんな物飛ばしてるなんて、どこかの軍隊かな？</span><br />
   </div>
   <div class="mb-2">
-    <span><b>オタコン</b><br />
-      <span class="inline-span">シャドーモセスの時とは違うんだ。何かあったらすぐ連絡してくれ。</span><br />
-      <span class="inline-span">周波数は141.12だ。</span><br />
+    <span><b>スネーク</b></span><br />
+    <span class="mb-2 inline-span">いや、そうとも言えない。民間型のKa-62かも知れない。</span>
   </div>
   <div class="mb-2">
-    <span><b>スネーク</b><br />
-      <span class="inline-span">データの記録はどうする？</span><br />
+    <span><b>オタコン</b></span><br />
+    <span class="inline-span">いいかい、スネーク。必要なのはメタルギア開発の証拠写真だ。</span><br />
+    <span class="inline-span">それさえあれば良い。あとはNGOの<ruby>HP<rt>ホームページ</rt></ruby>に掲載して情報を公開する・・・・・・。</span><br />
+    <span class="inline-span">いいね、手荒な真似はしないでくれよ。</span><br />
   </div>
-  <span class="mb-2 inline-span"><b>オタコン</b>：僕がするよ。<ruby>記録<rt>セーブ</rt></ruby>用の専用回線は140.96・・・・・・。</span><br />
-  <span class="mb-2 inline-span">メイ・リンじゃなくて残念だけど。</span><br />
-  <span class="mb-2 inline-span"><ruby>記録<rt>セーブ</rt></ruby>したい時はこっちに無線してくれればいい。</span><br />
-  <span class="mb-2 inline-span"><b>スネーク</b>：ああ・・・・・・。</span><br />
-  <span class="mb-2 inline-span"><b>オタコン</b>：ベラザノ橋を超えた所で待ってる。それまでに離脱するんだ。</span><br />
-  <span class="mb-2 inline-span"><b>スネーク</b>：また連絡する。</span><br />
+  <div class="mb-2">
+    <span><b>スネーク</b></span><br />
+    <span class="inline-span">わかった、努力する。</span><br />
+  </div>
+  <div class="mb-2">
+    <span><b>オタコン</b></span><br />
+    <span class="inline-span">シャドーモセスの時とは違うんだ。何かあったらすぐ連絡してくれ。</span><br />
+    <span class="inline-span">周波数は141.12だ。</span><br />
+  </div>
+  <div class="mb-2">
+    <span><b>スネーク</b></span><br />
+    <span class="inline-span">データの記録はどうする？</span><br />
+  </div>
+  <div class="mb-2">
+    <span><b>オタコン</b></span><br />
+    <span class="inline-span">僕がするよ。<ruby>記録<rt>セーブ</rt></ruby>用の専用回線は140.96・・・・・・。</span><br />
+    <span class="inline-span">メイ・リンじゃなくて残念だけど。</span><br />
+    <span class="inline-span"><ruby>記録<rt>セーブ</rt></ruby>したい時はこっちに無線してくれればいい。</span><br />
+  </div>
+  <div class="mb-2">
+    <span><b>スネーク</b></span><br />
+    <span class="inline-span">ああ・・・・・・。</span><br />
+  </div>
+  <div class="mb-2">
+    <span><b>オタコン</b></span><br />
+    <span class="inline-span">ベラザノ橋を超えた所で待ってる。それまでに離脱するんだ。</span><br />
+  </div>
+  <div class="mb-2">
+    <span><b>スネーク</b></span><br />
+    <span class="mb-2 inline-span"><b>スネーク</b>：また連絡する。</span><br />
+  </div>
   </div>
 </body>
