Add home button

--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -9,6 +9,9 @@
 </html>
 
 <body class="col-12 p-5">
+  <button class="btn btn-primary">
+    <a href="/">ホーム</a>
+  </button>
   <h1 class="fw-bold">タンカー</h1>
   <hr>
   <h5 class="fw-bold">第一無線の会話</h5>
