Fix color on home page button

--- a/mgs2/tanker.html
+++ b/mgs2/tanker.html
@@ -10,7 +10,7 @@
 
 <body class="col-12 p-5">
   <button class="btn btn-primary">
-    <a href="/">ホーム</a>
+    <a class="text-decoration-none text-white" href="/">ホーム</a>
   </button>
   <h1 class="fw-bold">タンカー</h1>
   <hr>
